<resources>
    <string name="app_name">Cafeteria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_bocadillos">Bocadillos</string>
    <string name="menu_bebidas">Bebidas</string>
    <string name="menu_bolleria">Bolleria</string>
    <string name="menu_croissant">Croissant</string>
    <string name="menu_sandwiches">Sandwiches</string>
    <string name="menu_snacks">Snacks</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
